<resources>
    <string name="app_name">Covid App</string>
    <string name="donate">Donate</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="image">Image</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="covid_toolkit">Covid Toolkit</string>
    <string name="resource_type">Resource Type</string>
    <string name="oxygen">Oxygen</string>
    <string name="oxy">Oxy</string>
    <string name="medicine">Medicine</string>
    <string name="ambulance">Ambulance</string>
    <string name="plasma">Plasma</string>
    <string name="beds">Beds</string>
    <string name="meals">Meals</string>
    <string name="covid_test">Covid Test</string>
    <string name="helpline">Helpline</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="latest_data">Latest data</string>
    <string name="add">+ Add</string>
    <string name="location_of_oxygen_requirement">Location Of Oxygen Requirement</string>
    <string name="send">Send</string>
    <string name="location_of_medicine_requirement">Location of medicine requirement</string>
    <string name="location_of_ambulance_requirement">Location of Ambulance Requirement</string>
    <string name="location_of_bed_requirement">Location of bed requirement</string>
    <string name="location_of_covid_test_requirement">Location Of Covid Test</string>
    <string name="location_of_helpline_requirement">Location of helpline requirement</string>
    <string name="location_of_meals_requirement">Location of meal requirement</string>
    <string name="location_of_miscellaneous_requirement">Location of miscellaneous requirement</string>
    <string name="location_of_plasma_requirement">Location of plasma requirement</string>
    <string name="cities">Cities</string>
    <string name="others">Others</string>
    <string name="lucknow">Lucknow</string>
</resources>