<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e4e4"
    tools:context=".OxygenGetLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/oxygenRequirement"
            android:layout_width="100dp"
            android:layout_height="115dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#f5f5f5"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/oxy"
                    android:padding="5dp"
                    android:src="@drawable/oxygen2" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c4c4c4"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="#4D4949"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/oxygen"
                    android:textSize="16sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="#ffffff"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/etOxygenLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:inputType="none"
                android:background="#ffffff"
                android:hint="@string/location_of_oxygen_requirement" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUploadNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>